--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -15,10 +15,10 @@ fieldset {
     text-align: left;
 }
 
-.form--login > fieldset > input[type="email"],
+/* .form--login > fieldset > input[type="email"],
 .form--login > fieldset > input[type="password"] {
     width: 25em;
-}
+} */
 
 .label--login {
     width: 8rem;
