--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,20 +1,36 @@
 .navbar {
+    width: 100%;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+    text-align: center;
+    font-family: "Patua One", serif;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .nav-link {
     flex-basis: 20%;
     list-style-type: none;
+    color: #202142;
 }
 
 .nav-item {
     list-style-type: none;
+}
+
+.nav-link:hover {
+    text-decoration: none;
+    flex-basis: 20%;
+    list-style-type: none;
+    color: tomato;
 }
 
