--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  margin-top: 2rem;
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
@@ -13,11 +17,13 @@ code {
     monospace;
 }
 
+/* BUTTON-52 */
 .button-52 {
   font-size: 16px;
   font-weight: 200;
   letter-spacing: 1px;
-  padding: .7rem 1rem;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
   outline: 0;
   border: 1px solid black;
   cursor: pointer;
@@ -50,3 +56,327 @@ code {
     padding: .7rem 1rem;
   }
 }
+
+/* BUTON-DELETE */
+.btn-delete {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-delete:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-delete:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: tomato;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+/* BUTTON-RESPOND */
+.btn-respond {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-respond:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-respond:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: #76d26e;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+/* BUTTON-LOGOUT */
+.btn-logout {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-logout:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-logout:hover:after {
+  top: 0px;
+  left: 0px;
+  /* background-color: #76d26e; */
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+
+/* BUTTON - SUBMIT */
+.btn-submit {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-submit:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-submit:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: #76d26e;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+/* BUTTON SAVE */
+.btn-save {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-save:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-save:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: #76d26e;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+/* BUTTON EDIT */
+.btn-edit {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .5rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-edit:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-edit:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: #76d26e;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
+/* BUTTON - VIEW */
+.btn-view {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: .5rem .7rem;
+  margin: 1rem 1rem;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn-view:after {
+  content: "";
+  background-color: #000;
+  width: 100%;
+  background-color: #ffe54c;
+  color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.btn-view:hover:after {
+  top: 0px;
+  left: 0px;
+  background-color: #76d26e;
+  color: #fff;
+
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: .7rem 1rem;
+  }
+}
+
