--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -2,10 +2,11 @@
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     margin-bottom: 0;
     margin-top: 0;
+    padding: 0;
 }
 
 .navbar__item {
