--- a/src/components/students/StudentProfileForm.css
+++ b/src/components/students/StudentProfileForm.css
@@ -36,6 +36,20 @@ input[type=number] {
   box-shadow:0 0 15px 8px rgba(0,0,0,0.06);
 }
 
+input[type=email] {
+  padding:10px;
+  margin:10px 10px; 
+  border: 0;
+  box-shadow:0 0 15px 8px rgba(0,0,0,0.06);
+}
+
+input[type=password] {
+  padding:10px;
+  margin:10px 10px; 
+  border: 0;
+  box-shadow:0 0 15px 8px rgba(0,0,0,0.06);
+}
+
 /* <!-- HTML !-->
 <button class="button-52" role="button">Button 52</button> */
 
