--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -56,6 +56,7 @@ fieldset {
     background-color: hsla(0,0%,100%,0.75);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    margin-bottom: 2rem
 }
 
 .button--close {
