--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-delete {
     padding: .7rem 1rem;
   }
 }
@@ -106,7 +106,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-respond {
     padding: .7rem 1rem;
   }
 }
@@ -153,7 +153,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-logout {
     padding: .7rem 1rem;
   }
 }
@@ -200,7 +200,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-submit {
     padding: .7rem 1rem;
   }
 }
@@ -246,7 +246,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-save {
     padding: .7rem 1rem;
   }
 }
@@ -293,7 +293,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-edit {
     padding: .7rem 1rem;
   }
 }
@@ -340,7 +340,7 @@ code {
 }
 
 @media (min-width: 768px) {
-  .button-52 {
+  .btn-view {
     padding: .7rem 1rem;
   }
 }
