--- a/src/components/students/StudentDetails.css
+++ b/src/components/students/StudentDetails.css
@@ -1,8 +1,11 @@
+.students {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+}
+
+
 .student__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* display: grid; */
     padding: 1.6rem;
     /* border: 1px solid #a2a2a2; */
     border-radius: 4px;
@@ -10,13 +13,6 @@
     margin-bottom: 1.6rem;
     margin-top: 2rem;
     max-width: 700px;
-}
-
-.students {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .card {
