--- a/src/components/instructors/InstructorProfileForm.css
+++ b/src/components/instructors/InstructorProfileForm.css
@@ -22,12 +22,24 @@
 
 }
 
+textarea.form-control {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:10px;
+    margin:10px 10px; 
+    border: 0;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+}
+
 input[type=text] {
   padding:10px;
   margin:10px 10px; 
   border: 0;
   box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
 }
+
 
 input[type=number] {
   padding:10px;
