--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,5 +1,6 @@
 .navbar {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
@@ -34,4 +35,6 @@
     list-style-type: none;
     color: tomato;
 }
+
+
 
