--- a/src/components/students/StudentList.css
+++ b/src/components/students/StudentList.css
@@ -1,35 +1,25 @@
-.student__section {
-    display: grid;
-     grid-template-rows:    repeat(4, auto);
+.students {
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 1.6rem;
-    /* border: 1px solid #a2a2a2; */
+}
+
+.student__section {
     border-radius: 4px;
     box-shadow: 0 0 15px #d7d6d6;
     margin-bottom: 1.6rem;
     margin-top: 2rem;
-    max-width: 700px;
 }
 
-.students {
-    display: grid;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .card {
     display: flex;
     flex-direction: column;
     justify-content: ;
     align-items: center;
-    width: 300px;
+    /* width: 300px; */
     margin-bottom:2rem;
 }
-
-
 
 .thumbnail {
     width: 150px;
